Merge branch 'apps-7344' into 'main'
APPS-7344 Update to GWT 2.13.0

See merge request ggb/geogebra!10196

GitOrigin-RevId: cacd8a07a618368955c532743dfe077beb2f1aa5